Update to first try ;)

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ###########
 # site.url, site.title
 
-url:   'http://mastr.github.io/off.network-projects/'
+#url:   'http://mastr.github.io/off.network-projects/'
 title: 'Offline Networks - Projects page'
 
 
