--- a/_data/projects/librarybox.yml
+++ b/_data/projects/librarybox.yml
@@ -1,4 +1,4 @@
 name: LibraryBox
 url: http://librarybox.us
-description: Bla bla bla
-cathegories: hotspot, file exchange
+description: LibraryBox is an open source, portable digital file distribution tool based on inexpensive hardware that enables delivery of educational, healthcare, and other vital information to individuals off the grid.
+categories: hotspot, file distribution
